# jupyterlab-github

./: .eslintrc.js  .gitignore  .prettierignore  .stylelintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: binder-on-pr.yaml  build.yml  check-release.yml  packaging.yml  prep-release.yml  publish-release.yml
binder/: environment.yml  postBuild
jupyter-config/jupyter_notebook_config.d/: jupyterlab_github.json
jupyter-config/jupyter_server_config.d/: jupyterlab_github.json
jupyterlab_github/: __init__.py
jupyterlab_github/api/: api.yaml
schema/: drive.json
src/: browser.ts  contents.ts  github.ts  index.ts
style/: base.css  index.css
